@@ -87,3 +87,7 @@ I: 271
 N: oweidner
 E: oweidner@cct.lsu.edu
 I: 275
+
+N: Tarek Ziade
+E: ziade.tarek
+I: 281
